# smartcorr

./: .dvcignore  .gitignore  .mcp.json  BI_Ferramenta_Correlacao_Inteligente.code-workspace  MLPreditivoAbs.py  README.md  analise_MLPreditivoAbs.md  backtest_historico.py  dashboard.py  dashboard_lib.py  diversos.md  dvc.yaml  main.py  params.yaml  pipeline-analysis.md  pyproject.toml  requirements.txt  requirements_39.txt  run_benchmark.py  run_inference.bat  run_inference.py  run_local_inference.bat  run_local_training.bat  run_training.bat  run_training.py  setupVenv.ps1  start_mlflow.ps1
Cronograma/: ESTIMATIVA_PROJETO 01.md  ESTIMATIVA_PROJETO 02.md  ESTIMATIVA_PROJETO.md  RELATORIO_ACOMPANHAMENTO_S1_S2.md  RELATORIO_EXECUCAO_20260207.md  RELATORIO_STATUS_INICIAL.md
Diagnostico/: diagnostico_20260428.md  diagnostico_modelo.md  diagnostico_smartcorr.md  implementacao_diagnostico.md  plano_implementacao.md  plano_melhorias_smartcorr.md
Presentation/: index.html
Projeto/: PROCESS_DOCUMENTATION.md  main.py  requirements.txt  run_script.bat  run_script_eval.bat  setupVenv.ps1
Resultados/: resultado_20260419.csv  resultado_20260419.xlsx  results.csv
SQL/: CREATE_FACT_PREVISAO.sql  Intraday_ProgramMetaData.sql  Intraday_dia-filtro-query.sql  Intraday_intervalo.sql  ProgramsMetaData.sql  QUERY_FRONTEND_BI copy.sql  QUERY_FRONTEND_BI.sql  VW_SMARTCORR_PRINCIPAL.sql  VW_SMARTCORR_PRINCIPAL_bkp20260226.sql  benchmark_actuals.sql  comparacao_erlang_smartcorr.sql  intraday.sql
config/: queries.ini
docs/: ANALISE_EXCECOES_SISTEMA.md  CONTEXTO_LAGS.md  (+16 more)
(+1018 files in other folders)
