[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcorr"
version = "0.1.2"
description = "Ferramenta de Correlação Inteligente com Machine Learning (MLOps)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "BI Corp" }
]
keywords = ["mlops", "machine-learning", "xgboost", "forecasting"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "dvc==3.67.1",
    "joblib==1.5.3",
    "llvmlite==0.43.0",
    "mlflow==2.15.0",
    "numba==0.60.0",
    "numpy>=1.20",
    "packaging>=19",
    "pandas==2.3.3",
    "pyodbc==5.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz>=2020.1",
    "PyYAML==6.0.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "shap==0.49.1",
    "six==1.17.0",
    "slicer==0.0.8",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "xgboost==2.1.4"
]

[tool.setuptools.packages.find]
where = ["src"]
